--- a/package.json
+++ b/package.json
@@ -74,6 +74,9 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.3",
+    "eslint-config-prettier": "^10.1.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
