--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quanta-next",
   "version": "0.1.2",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
