--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quanta-next",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -38,6 +38,8 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.0",
     "@tanstack/react-query": "^5.90.10",
     "@tanstack/react-query-devtools": "^5.91.0",
     "@tanstack/react-table": "^8.21.3",
@@ -51,6 +53,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.23.24",
     "input-otp": "1.4.1",
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
@@ -64,11 +67,14 @@
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
+    "react-tsparticles": "^2.12.2",
     "recharts": "latest",
     "sonner": "^1.7.1",
     "stripe": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.181.2",
+    "tsparticles": "^3.9.1",
     "uuid": "^11.1.0",
     "vaul": "^0.9.6",
     "xlsx": "^0.18.5",
